[tool.poetry]
name = "sqlalchemy-memory-investigation"
version = "1.0.0"
description = ""
authors = ["Sergej Herbert"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^6.1.0"
confluent-kafka = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
